test/errors/short_neg1.ls

#OUTPUT
#Syntax Error: Negation invalid for this type.
# -> [13] short x = -0xABCD
#
#END

#RET 0

extern func printf(s:str, ...)

func main -> int
    short x = -0xABCD

    return 0
end

